k8s/app2.yaml
# app2-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: fastapi-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: dev.local/app2:latest  # Replace with your actual image tag
        imagePullPolicy: Never
      restartPolicy: Always
