k8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: fastapi-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: app1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: fastapi-kafka
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
