k8s/app3.yaml
# app3-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: fastapi-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: dev.local/app3:latest  # Replace with your actual image tag
        imagePullPolicy: Never
        ports:
        - containerPort: 8003
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: fastapi-kafka
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
  type: ClusterIP
